--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,9 @@
 /**********GENERAL STYLES**************/
 
 h1,h2,h3,h4,h5,h6 {
-    font-family: sans-serif;
-    letter-spacing: 1px;
+  font-family: "Open Sans", sans-serif;
+  font-weight: 600;
+  letter-spacing: 1px;
 }
 body, p {
     font-weight: normal;
@@ -466,7 +467,7 @@ margin-right: 5px;
 footer {
     margin-top: 25px;
     padding-top: 15px;
-    border-top: 1px solid grey;
+    /*border-top: 1px solid grey;*/
     font-size: 11px;
     line-height: 15px;
     font-weight:normal;
@@ -667,4 +668,219 @@ input.geolocation-longitude {
         display: inline-block;
         width: 48%;
     }
+}
+
+/**** sebastian.gassner@gmail.com ****/
+
+body {
+  background: url('../images/up_bg3.jpg') no-repeat scroll center 0 #fff;
+  color: #333;
+}
+
+.navbar {
+  border-radius: 0px;
+}
+
+.navbar-default {
+  background: -webkit-linear-gradient(top, #ff9900 0%, #ee7000 100%);
+  margin-bottom: 5px;
+}
+
+.nav>li {
+  border-left: 1px solid #fa8c00;
+  border-right: 1px solid #cf6c01;
+}
+
+.navbar-default .navbar-nav>li>a {
+  color: #fff;
+  text-transform: uppercase;
+  display: block;
+  font-weight: bold;
+  /*height: 33px;*/
+  /*padding: 16px 31px 0;*/
+  text-decoration: none;
+}
+
+.navbar-default .navbar-nav>.active>a {
+  color: #fff;
+  background: -webkit-linear-gradient(top, #fd961c 0%, #fea521 100%);
+}
+
+.navbar-default>.container-fluid, .navbar-default>.container-fluid>.navbar-collapse {
+  padding-left: 0px;
+}
+
+#header + .container {
+  background-color: #fff;
+  box-shadow: 0px 0px 20px rgba(0,0,0,0.5);
+  padding-top: 15px;
+  margin-top: 15px;
+}
+
+#wrapper {
+  background-color: #fff;
+  border: 0px;
+  padding-top: 0px;
+  margin-top: 0px;
+}
+
+.banner-image {
+  padding: 0 15px 5px 15px;
+  width: 100%;
+}
+
+footer {
+  /*border-top: 1px solid #eee;*/
+  color: #aaa;
+}
+
+footer a {
+  color: #aaa;
+}
+
+#wrapper {
+  padding: 15px;
+}
+
+.logoimg>h3 {
+  text-shadow: 1px 1px 3px rgb(0,0,0,0.1);
+}
+
+#primary>#nav-info {
+  display: none;
+}
+
+#breadcrumbs {
+  background-color: #8c8c8c;
+  border-radius: 0px;
+  padding: 0px 10px 3px 10px;
+  font-size: 0.9em;
+}
+
+#breadcrumbs li, #breadcrumbs a {
+  color: #fff;
+}
+
+#exhibit-pages {
+  border-top: 4px solid #fd8900;
+  border-left: none;
+}
+
+#exhibit-pages>h4 {
+  margin: 0px;
+  padding: 10px 0px 10px 20px;
+  background-color: #efefef;
+  color: #333;
+  text-transform: uppercase;
+  letter-spacing: 0px;
+}
+
+#exhibit-pages ul>li>a {
+  color: #666;
+  font-weight: 600;
+  text-decoration: underline;
+  background: url('../images/up_arrow.png') no-repeat scroll -1px 10px transparent;
+}
+
+#exhibit-pages>h4>a {
+  color: #333;
+}
+
+.page-header {
+  border-bottom: 0px;
+}
+
+.page-header .glyphicon {
+  display: none;
+}
+
+/************ Masonry **********/
+
+/*
+.grid-sizer,
+.grid-item {
+  box-sizing: border-box;
+  width: 25%;
+  margin-bottom: 10px;
+}
+
+.grid-item--width2 {
+  width: 50%;
+}
+
+.grid-item img {
+  object-fit: cover;
+  height: 275px;
+}
+
+.grid-item--width2 img {
+  width: 560px;
+}
+*/
+
+/**** Text over images ****/
+
+.tile-with-text {
+  height: 300px;
+  background-size: 100%;
+  background-position: center;
+  position: relative;
+}
+
+.tile-with-text a {
+  color: #fff;
+  font-weight: 600;
+  text-shadow: 1px 1px 3px rgba(0,0,0,0.3);
+  font-size: 2.0em;
+  text-transform: uppercase;
+}
+
+.tile-with-text .header {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  padding: 0 0 10px 20px;
+}
+
+.tile-with-text--1-1 {
+  background-image: linear-gradient(to bottom, rgba(0,0,0,0), rgba(0,0,0,0.6)),
+  url("http://dighum01.phil.uni-passau.de:8088/files/square_thumbnails/21d7445429a759c8a369beabf581024e.jpg");
+}
+
+.tile-with-text--1-2 {
+  background-image: linear-gradient(to bottom, rgba(0,0,0,0), rgba(0,0,0,0.6)),
+  url("http://dighum01.phil.uni-passau.de:8088/files/square_thumbnails/688550b26d959134207dfecec6ada8d2.jpg");
+}
+
+.tile-with-text--1-3 {
+  background-image: linear-gradient(to bottom, rgba(0,0,0,0), rgba(0,0,0,0.6)),
+  url("http://dighum01.phil.uni-passau.de:8088/files/square_thumbnails/110f5bd92997fd7bdb17324ee905e30b.jpg");
+}
+
+.tile-with-text--1-4 {
+  background-image: linear-gradient(to bottom, rgba(0,0,0,0), rgba(0,0,0,0.6)),
+  url("http://dighum01.phil.uni-passau.de:8088/files/square_thumbnails/d8de70f47296b25232786736b2e45ec4.jpg");
+}
+
+.tile-with-text--1-5 {
+  background-image: linear-gradient(to bottom, rgba(0,0,0,0), rgba(0,0,0,0.6)),
+  url("http://dighum01.phil.uni-passau.de:8088/files/square_thumbnails/c4456f479e4126354e2ff188572dd077.jpg");
+}
+
+.tile-with-text--1-6 {
+  background-image: linear-gradient(to bottom, rgba(0,0,0,0), rgba(0,0,0,0.6)),
+  url("http://dighum01.phil.uni-passau.de:8088/files/square_thumbnails/97bed54fcdf5bcda14750902ef3228ac.jpg");
+}
+
+/*** Hide navigation ***/
+
+#main-title {
+  padding: 0;
+}
+
+#main-title span {
+  font-size: 2.5em;
+  font-weight: 600;
+  color: #000;
+  text-shadow: 0px 0px 3px rgba(0,0,0,0.2);
 }
