--- a/css/style.css
+++ b/css/style.css
@@ -862,11 +862,14 @@ p {
   font-weight: 800;
   color: black;
   background-color: white;
-  font-size: 2.0em;
-  letter-spacing: 0.2em;
+  font-size: 3.0em;
+  letter-spacing: 0.1em;
   text-align: center;
-  margin: 15px 0 0 0;
+  margin: 5px 0 0 0;
   padding: 10px 0 30px 0;
+  text-shadow: 2px 2px 2px rgba(0,0,0,0.4);
+  border-top: 1px solid rgba(0,0,0,0.2);
+  box-shadow: 2px 2px 5px rgba(0,0,0,0.1);
 }
 
 /* UP40 nav */
