Fixing page widths.
Improving breadcrumbs.

--- a/css/style.css
+++ b/css/style.css
@@ -475,9 +475,6 @@ footer p {
     font-size: 11px;
     line-height: 15px;
 }
-footer a {
-    font-weight:bold;
-}
 .omeka-props-footer {
     font-size: 10px;
 }
@@ -733,9 +730,11 @@ footer {
   color: #aaa;
 }
 
-footer a {
-  color: #aaa;
+footer a, footer a:focus, footer a:hover {
+  color: #999999;
+  font-weight: 600;
 }
+
 
 #wrapper {
   padding: 15px;
@@ -933,6 +932,7 @@ p {
   color: #ffffff;
   border: 1px solid #ee7000;
   box-shadow: 1px 1px 2px rgba(0,0,0,0.2);
+  font-size: 1.3em;
 }
 
 /* threejs */
@@ -944,4 +944,32 @@ p {
 .pagination .active>span {
   background-color: #ee7000;
   border: 1px solid #dddddd;
+}
+
+/* Dublin Core display */
+.element-set h2 {
+  /* Hide "Dublin Core" */
+  display: none;
+}
+
+.element-set .element h3 {
+  font-size: 1.0em;
+}
+
+/* /items/browse nav */
+.secondary-nav li {
+  border: 1px solid #aaaaaa;
+  border-radius: 4px;
+  margin: 0 20px 0 0;
+  font-size: 0.9em;
+}
+.secondary-nav li a {
+  background-color: white;
+  color: black;
+  padding: 5px 10px 5px 10px;
+}
+.secondary-nav li.active a {
+  font-weight: bold;
+  background-color: #ee7000;
+  color: #ffffff;
 }
